# sensei

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h  config.h.in
include/activations/: activation.hpp  linear.hpp  relu.hpp  sigmoid.hpp  softmax.hpp  tanh.hpp
include/data/: data_io.hpp
include/loss/: ce.hpp  loss.hpp  mse.hpp
include/model/: cell.hpp  model.hpp  rbm.hpp  rnn.hpp
include/optimizer/: gradient_descent.hpp  optimizer.hpp
include/utils/: armadillo_utils.hpp
src/activations/: linear.cpp  relu.cpp  sigmoid.cpp  softmax.cpp  tanh.cpp
src/data/: data_io.cpp
src/loss/: ce.cpp  mse.cpp
src/model/: cell.cpp  rbm.cpp  rnn.cpp
src/optimizer/: gradient_descent.cpp  optimizer.cpp
src/utils/: armadillo_utils.cpp
test/: Makefile  iris.cpp  main.cpp  rbm-mnist.cpp
test/dataset/: big.csv  data.csv  iris.csv  iris_features.csv  small.csv
